update http example
